@@ -4,10 +4,14 @@
 \alias{make.transition.probs}
 \title{make.transition.probs}
 \usage{
-make.transition.probs(fit, ...)
+make.transition.probs(fit, labs = NULL, ...)
 }
 \arguments{
 \item{fit}{an object obtained as output of the call to \code{fit.models}}
+
+\item{labs}{a vector with labels to identify the 'profiles' ie the 
+combination of covariates that have been passed onto the model formula.
+If 'NULL' (default), then figures it out from the 'survHE' object.}
 
 \item{...}{additional arguments. Includes the standard inputs to the 
 call to \code{make.surv}, so \code{mod} (the index of the possibly many
@@ -24,9 +28,9 @@ all the times specified by the user
 }
 \description{
 Computes the transition probabilities (to be passed to a Markov model) from
-the survival curves obtained using \code{fit.models}, using the formula 
-p(t)=1-S(t+k)/S(t), where k is the Markov model cycle length and t is a 
-generic time
+the cumulative hazard curves obtained using \code{fit.models}, using the formula 
+p(t)=1-exp(H(t-k)/H(t)), where k is the Markov model cycle length (or the 
+difference across two consecutive times) and t is a generic time
 }
 \note{
 Something will go here
